--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "databaseToModel",
+  "name": "database-to-model",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts",
+    "build": "rimraf bin && tsc && gulp file && node bin/src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,12 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.7",
+    "@types/react": "^18.3.3",
+    "antd": "^5.18.3",
+    "gulp": "^5.0.0",
+    "nodemon": "^3.1.4",
+    "rimraf": "^5.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "dependencies": {
